# kube-obs

./: Cargo.toml  Dockerfile  LICENSE  README.md  kind.sh  local.sh
docker/: Dockerfile  api.Dockerfile  controller.Dockerfile  initContainer.dockerfile
local/: api.yaml  controller.yaml  db.sh
local/postgres/: values.yaml
service/: README.md
service/api/: Cargo.toml  README.md
service/api/db/: .env  diesel.toml  postgres-docker.sh
service/api/db/migrations/2022-11-05-111055_watcher/: down.sql  up.sql
service/api/db/sql/: create.sql
service/api/src/: create.rs  delete.rs  error.rs  lib.rs  main.rs  schema.rs
service/common/: Cargo.toml
service/common/src/: connection.rs  lib.rs  model.rs  schema.rs  time_check.rs
service/controller/: Cargo.toml  README.md
service/controller/error_stubs/: OOMkilled.yaml  crashloopbackoff.yaml  event_failedmount.yaml  event_unhealthy.yaml  imagepullbackoff.yaml  init01.yaml  podintializing.yaml
service/controller/src/: args.rs  create.rs  delete.rs  error.rs  list.rs  main.rs  pod.rs  util.rs
service/controller/src/utils/: mod.rs
ui/: README.md  codegen.ts  package.json  tsconfig.json
ui/elk/: docker-compose.yml
ui/mockData/: kube-obs_mapping.json
ui/src/components/k8s/: cluster-selector.tsx
ui/src/elastic/: client.ts  mock.ts  mockSetupElastic.ts
ui/src/elastic/mockData/events/deployment/: deployment_event_20221118114624708960000.json  deployment_event_20221118114659180680000.json  deployment_event_20221118114659185013000.json  deployment_event_20221118114659245065000.json  deployment_event_20221118114659245720000.json  deployment_event_20221118114659273850000.json  deployment_event_20221118114659276213000.json  deployment_event_20221118114659333379000.json  deployment_event_20221118114659334480000.json  deployment_event_20221118114659337651000.json  deployment_event_20221118114715222342000.json  deployment_event_20221118114715225173000.json  deployment_event_20221118114715369683000.json  deployment_event_20221118114715479730000.json  deployment_event_20221118114715483613000.json  deployment_event_20221118114716755496000.json  deployment_event_20221118114716763309000.json  deployment_event_20221118114716764168000.json
ui/src/elastic/mockData/events/pod/: pod_event_20221118111143910727000.json  pod_event_20221118113708148312000.json  pod_event_20221118113708149614000.json  pod_event_20221118113708151101000.json  pod_event_20221118113708200053000.json  pod_event_20221118113708203626000.json  pod_event_20221118113708226219000.json  pod_event_20221118113708230031000.json  pod_event_20221118113708230749000.json  pod_event_20221118113708300441000.json  pod_event_20221118113712139516000.json  pod_event_20221118113712141175000.json  pod_event_20221118113715118141000.json  pod_event_20221118113715120255000.json  pod_event_20221118113715122100000.json  pod_event_20221118113715122955000.json  pod_event_20221118113716126640000.json  pod_event_20221118113716128383000.json  pod_event_20221118113716129225000.json  pod_event_20221118113723189620000.json  pod_event_20221118113723192155000.json  pod_event_20221118113723193063000.json  pod_event_20221118113723193841000.json  pod_event_20221118113727143219000.json  pod_event_20221118113727143858000.json  pod_event_20221118113727144621000.json  pod_event_20221118113727145456000.json  pod_event_20221118113729113151000.json  pod_event_20221118113729114998000.json  pod_event_20221118113729115707000.json  pod_event_20221118113729116521000.json  pod_event_20221118113756207738000.json  pod_event_20221118113756208279000.json  pod_event_20221118113800121194000.json  pod_event_20221118113800122674000.json  pod_event_20221118113800123198000.json  pod_event_20221118113805063292000.json  pod_event_20221118113805064112000.json  pod_event_20221118113810082929000.json  pod_event_20221118113810083714000.json  (+26 more)
ui/src/elastic/mockData/events/statefulset/: statefulset_event_20221118115046711967000.json  statefulset_event_20221118115109744064000.json  statefulset_event_20221118115109744985000.json  (+2 more)
ui/src/graphql/: generated.ts  index.ts  k8s.ts
ui/src/layouts/: kibana.tsx  kibana_collapsible_nav.tsx
ui/src/lib/: hooks.ts
ui/src/pages/: _app.tsx  index.tsx
ui/src/pages/api/: graphql.ts  query.ts
ui/src/pages/api/document/: [...id].ts
ui/src/pages/api/event/: [type].ts
ui/src/pages/api/query/: [index].ts
ui/src/pages/api/resource/: [...slug].ts
ui/src/pages/dashboards/: cluster-health.tsx  pods.tsx
ui/src/pages/deployments/: pods.tsx
ui/src/pages/diagnostics/: super-search.tsx
ui/src/recoil/: cluster.ts
ui/src/redux/: cluster.ts  store.ts
ui/src/styles/: global.styles.ts
(+17 files in other folders)
