[package]
name = "kube-obs-api"
version = "0.1.0"  #:version
authors = ["Mahesh Rayas"]
description = """
api to get the cluster details
"""
documentation = "https://docs.rs/kube-obs-api"
homepage = "https://github.com/<todo>"
repository = "https://github.com/<todo>"
readme = "README.md"
keywords = ["kubernetes", "k8s"]
license = "Unlicense OR MIT"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
common = { package = "common", path = "../common" }
actix-web = "4.2.1"
diesel = { version = "2.0.2", features = ["postgres","chrono","serde_json","r2d2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = {version = "0.1", features = ['log']}
chrono = { version = "0.4.19", features = ["serde"] }
