[package]
name = "common"
version = "0.1.0"
authors = ["Mahesh Rayas"]
edition = "2021"

[dependencies]
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.12", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.18.0"
opentelemetry = { version = "0.18.0" , features= ["rt-tokio"]}
opentelemetry-otlp = { version = "0.11.0"}
