[package]
name = "kube-obs-controller"
version = "0.1.0"
authors = ["Mahesh Rayas"]
description = """
Controller to get the cluster details
"""
documentation = "https://docs.rs/kube-obs-controller"
homepage = "https://github.com/<todo>"
repository = "https://github.com/<todo>"
readme = "README.md"
keywords = ["kubernetes", "k8s"]
license = "Unlicense OR MIT"
edition = "2021"

[[bin]]
name = "controller"
path = "src/main.rs"

[dependencies]
common = { package = "common", path = "../common" }
