[package]
name = "kube-obs-controller"
version = "0.1.0"
authors = ["Mahesh Rayas"]
description = """
Controller to get the cluster details
"""
documentation = "https://docs.rs/kube-obs-controller"
homepage = "https://github.com/<todo>"
repository = "https://github.com/<todo>"
readme = "README.md"
keywords = ["kubernetes", "k8s"]
license = "Unlicense OR MIT"
edition = "2021"

[[bin]]
name = "controller"
path = "src/main.rs"

[dependencies]
clap = { version ="4.0.18",features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
kube = { version = "0.76.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
futures = "0.3.21"
backoff = "0.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = { version = "1.0.48", features = ["preserve_order"]}
tracing = {version = "0.1", features = ['log']}
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1.53"
tracing-subscriber = { version = "0.3.12", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.18.0"
serde_derive = "1.0.114"
serde = "1.0.114"
